--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,6 @@
 			let obst = [
 				{x: 360,y: 0, width: 32, height: 32, color: 'red'},
 				{x: 0,y: 448, width: 32, height: 32, color: 'red'},
-				{x: 608,y: 360, width: 32, height: 32, color: 'red'},
 			]
 
 			function draw(){
@@ -41,9 +40,16 @@
 					ctx.fillRect(value.x, value.y, value.width, value.height);
 				})
 			}
+			
+			const KEYS ={
+				up: 87,
+				down: 83,
+				right: 68,
+				left: 65
+			}
 
 			function keyDownHandler(event) {
-				if(event.keyCode == 39) {
+				if(event.keyCode == KEYS.right) {
 					//right
 					let obstacles = []
 					obst.forEach(value => {
@@ -58,7 +64,7 @@
 						player.x = WIDTH - player.width;
 					}
 				}
-				else if(event.keyCode == 37) {
+				else if(event.keyCode == KEYS.left) {
 					//left
 					let obstacles = []
 					obst.forEach(value => {
@@ -73,7 +79,7 @@
 						player.x = 0;
 					}
 				}
-				if(event.keyCode == 38) {
+				if(event.keyCode == KEYS.up) {
 					let obstacles = []
 					obst.forEach(value => {
 						if(value.x === player.x){
@@ -87,7 +93,7 @@
 						player.y = 0;
 					}
 				}
-				else if(event.keyCode == 40) {
+				else if(event.keyCode == KEYS.down) {
 					//down
 					let obstacles = []
 					obst.forEach(value => {
